# tikka-contracts

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TODO.md  fix_helpers.py  fix_tests.py  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-testnet.yml
.kiro/specs/emergency-pause-migration/: .config.kiro  design.md  tasks.md
.kiro/specs/paginated-query-system/: .config.kiro  design.md  tasks.md
.kiro/specs/periodic-state-snapshots/: design.md  tasks.md
.kiro/specs/randomness-oracle-abstraction/: design.md  tasks.md
.kiro/specs/ticket-refund-system/: .config.kiro  design.md  tasks.md
.kiro/specs/time-locked-admin-operations/: .config.kiro  design.md  tasks.md
contracts/hello-world/src/: lib.rs  test.rs
contracts/raffle/: Cargo.toml  check_out.txt  output.txt  patch.py  test_out.txt
contracts/raffle-factory/: error.txt  output_test.txt  patch2.py  test_out_utf8.txt  test_output.txt
contracts/raffle-factory/.cargo/: config.toml
contracts/raffle-factory/src/: lib.rs
contracts/raffle-instance/: Cargo.toml
contracts/raffle-instance/src/: events.rs  lib.rs  randomness.rs  test.rs
contracts/raffle-instance/tests/: property_tests.rs
contracts/raffle-shared/src/: lib.rs
contracts/raffle/src/: events.rs  lib.rs  oracle.rs  types.rs
contracts/raffle/src/instance/: mod.rs  randomness.rs  test.rs
contracts/tikka/: Cargo.toml
contracts/tikka/src/: lib.rs
deployments/: testnet.json
docs/: ERRORS.md  EVENTS.md  MIGRATION-426.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_buy_ticket.rs  fuzz_finalize_raffle.rs
oracle/: README.md  package-lock.json  package.json
oracle/src/: health.service.ts  index.ts  metrics.service.ts
oracle/src/keys/: key.service.test.ts  key.service.ts  secret-key.ts  secrets-adapters.ts
oracle/src/listener/: event-listener.service.test.ts  (+2 more)
scripts/: deploy-mainnet.sh  deploy-testnet.sh  fund-testnet.sh  invoke.sh  verify.sh
(+35 files in other folders)
